# stephendiehl.com

./: .gitignore  LICENSE  Makefile  README.md  Tikz.hs  demo.html  hakyll.hs  index.html  index.md  mytikz.hs  pgp.html  projects.html  stephendiehl.cabal  tikz.hs
_site/: index.html  posts.html
_site/css/: custom.css
_site/pages/: bitcoin.html  hire.html  pgp.html  projects.html  slides.html  writings.html
_site/posts/: abstraction.html  adjunctions.html  agda.html  books.html  category1.html  category2.html  category3.html  docs.html  essential_compilers.html  essential_haskell.html  example.html  generics.html  haskell_2016.html  haskell_web.html  llvm.html  monads.html  monads_machine_code.html  poll.html  postmodern.html  production.html  protolude.html  (+7 more)
css/: custom.css
diagrams/: coherence1.tex  coherence2.tex  nat.tex  naturality.tex  tikz-cd.sty
images/: category_alt_law_1.tex  category_alt_law_2.tex
pages/: bitcoin.md  hire.md  pgp.md  projects.md  slides.md  writings.md
posts/: abstraction.md  adjunctions.md  agda.md  books.md  category1.md  category2.md  category3.md  decade.md  docs.md  essential_compilers.md  essential_haskell.md  example.md  generics.md  ghc_01.md  ghc_02.md  ghc_03.md  haskell_2016.md  haskell_2017.md  haskell_2018.md  haskell_web.md  libra.md  llvm.md  monads.md  monads_machine_code.md  poll.md  postmodern.md  production.md  protolude.md  smart_contracts.md  socketio.md  strings.md  thesetup.md  tipy.md  types.md  unboxed_array.md  vim_2016.md  vim_haskell.md
stylesheets/: custom.css
templates/: default.html  list.html
