name:                stephendiehl
version:             0.1.0.0
homepage:            www.stephendiehl.com
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable build
  main-is:             hakyll.hs
  other-extensions:    OverloadedStrings
  build-depends:       
    hakyll     == 4.4.3.0,
    pandoc     == 1.12.*,
    base       >= 4.6  && < 4.7,
    process    >= 1.1  && < 1.2,
    unix       >= 2.6  && < 2.7,
    filepath   >= 1.3  && < 1.4,
    bytestring >= 0.10 && < 0.11,
    pureMD5    >= 2.1  && < 2.2,
    containers -any
  default-language:    Haskell2010
